Fixed hamburger menu.  Added style to collapsable menu. New function to compute cost.

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -2,12 +2,14 @@
     margin-right: 10px!important;
 }
 
-#login-link {
+#login-link, #regButton {
     margin-right: 10px;
+    margin-top: 5px;
 }
 
 #logoutButton {
     float: right;
+    margin-top: 5px;
 }
 
 #user-name {
